@@ -31,6 +31,7 @@ export(PparLapplyHet)
 export(ReplicateGene)
 export(TrigonometricAdditiveCooling)
 export(futureLapply)
+export(futureLapplyHet)
 export(lFxegaGaGene)
 export(xegaBestGeneInPopulation)
 export(xegaBestInPopulation)
